# Fetch-Robotics-simulation

./: .gitignore  LICENSE  README.md
python/: demo.py  pick_place_demo.py
ros_ws/src/fetch_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/sim_fetch_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/sim_fetch_gazebo/launch/: playground_new.launch
ros_ws/src/sim_fetch_gazebo/src/: fetch_control.py  main.py  robot_motion.py
ros_ws/src/sim_fetch_gazebo/worlds/: test_zone_2.sdf
